--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ notebook==6.4.6
 nsetools==1.0.11
 numpy==1.21.5
 openpyxl==3.0.9
-psycopg2 == 2.5 .4
+psycopg2 == 2.5.4
 packaging==21.3
 pandas==1.3.5
 pandocfilters==1.5.0
